--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -154,8 +154,10 @@ li {
   width: 96%;
   height: 55px;
   line-height: 55px;
+  color: #ffffff;
   font-size: 1.8em;
   background: $bg-color1;
   border: 0 none;
+  border-radius: 5px;
   text-align: center;
 }
