--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -1,7 +1,8 @@
 @charset "utf-8";
-$font-normal:#bcbcbc;
+$font-normal:#999;
+$font-tt:#dcdcdc;
 $bg-normal:#181a1d;
-$bg-color1:#ed4985;
+$bg-color-red:#ed4985;
 * {
   margin: 0;
   padding: 0;
@@ -36,9 +37,9 @@ audio, canvas, progress, video {
   vertical-align: baseline;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, em, span, i, strong {
   font-weight: normal;
-
+  font-style: normal;
 }
 
 img {
@@ -57,7 +58,7 @@ li {
 .header{
   height: 40px;
   line-height: 40px;
-  background: $bg-color1;
+  background: $bg-color-red;
   overflow: hidden;
     span{
       margin: 11px 2px 0 16px;
@@ -66,7 +67,7 @@ li {
       height: 18px;
       line-height: 18px;
       text-align: center;
-      color: $bg-color1;
+      color: $bg-color-red;
       font-size: 1.4em;
       font-weight: bolder;
       background: #ffffff;
@@ -142,7 +143,7 @@ li {
   height: 40px;
   line-height: 40px;
   font-size: 1.4em;
-  color: $font-normal;
+  color: $font-tt;
   text-indent: 20px;
   background: url(../img/btn-down.png) center center no-repeat;
   background-size: 5%;
@@ -156,8 +157,27 @@ li {
   line-height: 55px;
   color: #ffffff;
   font-size: 1.8em;
-  background: $bg-color1;
+  background: $bg-color-red;
   border: 0 none;
   border-radius: 5px;
   text-align: center;
+}
+
+.appointment-wrap{
+  width: 100%;
+  overflow: hidden;
+    p{
+      margin: 0 auto;
+      width: 96%;
+      font-size: 1.4em;
+    }
+}
+.point-font{
+  color: $bg-color-red;}
+.bk-font {
+  padding: 0 50px 0 8px;
+  height: 28px;
+  line-height: 28px;
+  display: inline-block;
+  background-color: #deff00;
 }
