--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 $font-normal:#999;
+$font-normal2:#666;
 $font-tt:#dcdcdc;
 $bg-normal:#181a1d;
 $bg-color-red:#ed4985;
@@ -271,7 +272,116 @@ li {
 .pay-select-number-wrap{
   padding: 20px 0;
   @extend %wrap;
+    p{
+      margin-bottom: 15px;
+      color: $font-normal2;
+      font-size: 1.4em;
+    }
 }
 .wz{
   width: 90%;
   display: inline-block;}
+.count{
+  margin-bottom: 10px;
+  height: 80px;
+  border-radius: 5px;
+  background: #292a2c;
+  border: 2px solid #0b0c0d;
+    .count-left {
+      float: left;
+      width: 77%;
+      height: 80px;
+      background: #292a2c;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+    }
+    .count-right{
+      float: right;
+      width: 23%;
+      height: 80px;
+      background: #525357;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+    }
+    .addition,
+    .subtraction{
+      height: 39px;
+      line-height: 39px;
+      text-align: center;
+      font-size: 3em;
+      color: $font-tt;
+    }
+    .addition {
+      border-bottom: 1px solid #343539;
+    }
+    .subtraction{
+      border-top: 1px solid #343539;
+    }
+}
+.count-left-item,
+.count-left-item-number{
+  float: left;
+  width: 47%;
+  height: 80px;
+
+}
+.count-left-item{
+  overflow: hidden;
+    .count-item-img{
+      padding: 3% 16%;
+      width: 70px;
+      height: 70px;
+      display: inline-block;
+      overflow: hidden;
+    }
+}
+.count-left-item-number{
+  text-align: center;
+  line-height: 80px;
+  font-size: 2.5em;
+  color: #ffffff;
+}
+.multiplication{
+  float: left;
+  width: 6%;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
+  font-size: 3em;
+  font-weight: bold;
+  color: $font-normal2;
+}
+.select-wrap{
+  position: relative;
+  float: left;
+  width: 99.4%;
+  height: 40px;
+  border-radius: 5px;
+  background: #292a2c;
+  border: 2px solid #0b0c0d;
+  overflow: hidden;
+  select{
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 40px;
+    font-size: 1.4em;
+    text-indent: 1em;
+    color: $font-normal;
+    background: transparent;
+    border: 0;
+    border-radius: 0;
+    -webkit-appearance: none;
+    appearance: none;
+  }
+  .select-down{
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    width: 23%;
+    height: 40px;
+    background: #525357 url(../img/btn-down.png) center center no-repeat;
+    background-size: 20%;
+  }
+}
