--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -9,6 +9,14 @@ $bg-color-red:#ed4985;
   width: 90%;
   overflow: hidden;
 }
+%input-wrap{
+  width: 99.4%;
+  min-height: 40px;
+  border-radius: 5px;
+  background: #292a2c;
+  border: 2px solid #0b0c0d;
+  overflow: hidden;
+}
 * {
   margin: 0;
   padding: 0;
@@ -56,6 +64,13 @@ img {
 li {
   list-style-type: none;
 }
+/*粉红色文字*/
+.point-font {
+  color: $bg-color-red;
+}
+/*下边距10*/
+.mgb10{
+  margin-bottom: 10px;}
 
 .wrap-box{
   width: 100%;
@@ -196,8 +211,7 @@ li {
       float: left;
     }
 }
-.point-font{
-  color: $bg-color-red;}
+
 .bk-font {
   padding: 0 50px 0 8px;
   height: 28px;
@@ -354,12 +368,7 @@ li {
 .select-wrap{
   position: relative;
   float: left;
-  width: 99.4%;
-  height: 40px;
-  border-radius: 5px;
-  background: #292a2c;
-  border: 2px solid #0b0c0d;
-  overflow: hidden;
+  @extend %input-wrap;
   select{
     position: absolute;
     z-index: 2;
@@ -384,4 +393,64 @@ li {
     background: #525357 url(../img/btn-down.png) center center no-repeat;
     background-size: 20%;
   }
+}
+.address-wrap{
+  @extend %wrap;
+}
+.address-tt{
+  padding: 13px;
+  font-size: 1.5em;
+  color: #ffffff;
+    span{
+      margin-right: 8px;
+      width: 30px;
+      height: 24px;
+      display: inline-block;
+      overflow: hidden;
+      vertical-align: bottom;
+    }
+}
+.input-wrap{
+  @extend %input-wrap;
+}
+.input-text{
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  border: 0 none;
+  background-color: transparent;
+  font-size: 1.4em;
+  text-indent: 1em;
+  color: #ffffff;
+  -webkit-appearance: none;
+  appearance: none;
+}
+.textarea-wrap{
+  @extend %input-wrap;
+  min-height: 80px;
+}
+.input-textarea{
+  padding: 5px;
+  width: 100%;
+  height: 70px;
+  border: 0 none;
+  background-color: transparent;
+  font-size: 1.4em;
+  text-indent: 1em;
+  color: #ffffff;
+  -webkit-appearance: none;
+  appearance: none;
+}
+.address-btn{
+  margin: 24px 0;
+  width: 100%;
+  height: 42px;
+  line-height: 42px;
+  font-size: 2em;
+  font-family:  "Helvetica Neue", Helvetica,"Microsoft Yahei", STHeiTi, Arial, sans-serif;
+  border: 0 none;
+  border-radius: 5px;
+  background: #e3e3e3;
+  -webkit-appearance: none;
+  appearance: none;
 }
