--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -4,6 +4,13 @@ $font-normal2:#666;
 $font-tt:#dcdcdc;
 $bg-normal:#181a1d;
 $bg-color-red:#ed4985;
+$color-blue:#0072ff;
+$color-1:#7e7f80;
+$color-2:#37383a;
+$color-3:#742e49;
+$color-4:#8c7c0e;
+$color-5:#0072ff;
+$color-6:#591f88;
 %wrap{
   margin: 0 auto;
   width: 90%;
@@ -64,9 +71,19 @@ img {
 li {
   list-style-type: none;
 }
+.fl {
+  float: left;
+}
+.fr{
+  float: right;
+}
 /*粉红色文字*/
 .point-font {
   color: $bg-color-red;
+}
+/*蓝色文字*/
+.point-font2{
+  color: $color-blue;
 }
 /*下边距10*/
 .mgb10{
@@ -173,15 +190,16 @@ li {
   position: fixed;
   left: 2%;
   bottom:12px;
-  width: 96%;
-  height: 55px;
-  line-height: 55px;
+  width: 63%;
+  height: 70px;
+  line-height: 70px;
   color: #ffffff;
   font-size: 1.8em;
-  background: $bg-color-red;
+  text-indent: 1em;
   border: 0 none;
-  border-radius: 5px;
-  text-align: center;
+  background: $bg-color-red url(../img/btn-right.png) 90% center no-repeat;
+  background-size: 14%;
+  text-align: left;
 }
 
 .appointment-wrap{
@@ -296,7 +314,7 @@ li {
   width: 90%;
   display: inline-block;}
 .count{
-  margin-bottom: 10px;
+  margin-bottom: 24px;
   height: 80px;
   border-radius: 5px;
   background: #292a2c;
@@ -335,25 +353,37 @@ li {
 .count-left-item,
 .count-left-item-number{
   float: left;
-  width: 47%;
+  width: 52%;
   height: 80px;
 
 }
 .count-left-item{
   overflow: hidden;
     .count-item-img{
-      padding: 3% 16%;
-      width: 70px;
-      height: 70px;
+      width: 100%;
+      height: 80px;
       display: inline-block;
       overflow: hidden;
     }
 }
 .count-left-item-number{
+  position: relative;
+  margin: 0 1%;
+  width: 46%;
   text-align: center;
-  line-height: 80px;
-  font-size: 2.5em;
+  line-height: 76px;
+  font-size: 8.2em;
   color: #ffffff;
+  background: #000 url(../img/number-bg.png) 0 0 repeat-x;
+  background-size: 50%;
+  letter-spacing: 7px;
+    .line{
+      position: absolute;
+      top: 38px;
+      width: 100%;
+      height: 2px;
+      background: #000000;
+    }
 }
 .multiplication{
   float: left;
@@ -393,6 +423,35 @@ li {
     background: #525357 url(../img/btn-down.png) center center no-repeat;
     background-size: 20%;
   }
+}
+.show-color{
+  width: 100%;
+  overflow: hidden;
+    li{
+      width: 60%;
+      height: 30px;
+      margin-bottom: 2px;
+        &:nth-of-type(1){
+          background: $color-1;
+        }
+        &:nth-of-type(2){
+          background: $color-2;
+        }
+        &:nth-of-type(3){
+          background: $color-3;
+        }
+        &:nth-of-type(4){
+          background: $color-4;
+        }
+        &:nth-of-type(5){
+          background: $color-5;
+        }
+        &:nth-of-type(6){
+          background: $color-6;
+        }
+    }
+    .w80p{
+      width: 80%;}
 }
 .address-wrap{
   @extend %wrap;
@@ -453,4 +512,20 @@ li {
   background: #e3e3e3;
   -webkit-appearance: none;
   appearance: none;
+}
+.pay-btns{
+  margin-top: 25px;
+  width: 100%;
+  overflow: hidden;}
+.wx-btn,
+.zfb-btn{
+  width: 35%;
+  height: 30px;
+  border: 2px solid #fff;
+  border-radius: 30px;
+  background: transparent;
+  color: #ffffff;
+  -webkit-appearance: none;
+  appearance: none;
+  font-size: 1.5em;
 }
