--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -588,3 +588,97 @@ li {
   color: #ffffff;
   font-size: 1.6em;
 }
+
+.appointment-info2-wrap{
+  background: #181a1d url(../img/info-bg.jpg) 100% 100% no-repeat;
+  background-size: 100%;
+}
+.app-info-list {
+  margin: 0 auto;
+  @extend %wrap;
+  li {
+    margin-bottom: 6px;
+    height: 34px;
+    line-height: 34px;
+    color: #ffffff;
+    font-size: 1.4em;
+    text-indent: 10px;
+      &:nth-of-type(1){
+        width: 70%;
+        background: rgba(237,73,133,.75);
+      }
+      &:nth-of-type(2){
+        width: 50%;
+        background: rgba(237,73,133,.65);
+      }
+      &:nth-of-type(3){
+        width: 80%;
+        background: rgba(237,73,133,.55);
+      }
+      &:nth-of-type(4){
+        width: 90%;
+        background: rgba(237,73,133,.45);
+      }
+      &:nth-of-type(5){
+        width: 55%;
+        background-color: rgba(237,73,133,.35);
+      }
+  }
+}
+.app-info2-tt{
+  margin: 35px auto;
+  width: 272px;
+  height: 36px;
+}
+.yuyue-info2{
+
+}
+.app-info2-btns{
+  position: relative;
+  margin: 60px auto 0 auto;
+  @extend %wrap;
+  overflow: visible;
+  height: 78px;
+  background: #181a1d;
+  border-top: 1px solid #464646;
+    .info2-left-btn,
+    .info2-right-btn {
+      margin-top: 18px;
+      width: 44.6875%;
+      height: 36px;
+      border: 2px solid #fff;
+      background: transparent;
+      border-radius: 30px;
+      color: #ffffff;
+      font-size: 1.5em;
+      cursor: pointer;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+    }
+    .info2-left-btn {
+      float: left;
+    }
+    .info2-right-btn{
+      float: right;}
+}
+.div-sjx{
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  margin-left: -15px;
+  width: 0;
+  height: 0;
+  border: 15px solid transparent;
+  border-bottom: 15px solid #464646;
+    &:after{
+      position: absolute;
+      top: -13px;
+      left: -15px;
+      content: "";
+      width: 0;
+      height: 0;
+      border: 15px solid transparent;
+      border-bottom: 15px solid #181a1d;
+    }
+}
