--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -20,7 +20,7 @@ $color-7:#fa7d42;
 %input-wrap{
   width: 99.4%;
   min-height: 40px;
-  border-radius: 5px;
+  border-radius: 30px;
   background: #292a2c;
   border: 2px solid #0b0c0d;
   overflow: hidden;
@@ -509,7 +509,7 @@ li {
   min-height: 80px;
 }
 .input-textarea{
-  padding: 5px;
+  padding: 10px;
   width: 100%;
   height: 70px;
   border: 0 none;
@@ -526,10 +526,11 @@ li {
   height: 42px;
   line-height: 42px;
   font-size: 2em;
+  color: #ffffff;
   font-family:  "Helvetica Neue", Helvetica,"Microsoft Yahei", STHeiTi, Arial, sans-serif;
-  border: 0 none;
-  border-radius: 5px;
-  background: #e3e3e3;
+  border: 2px #fff solid;
+  border-radius: 30px;
+  background: transparent;
   -webkit-appearance: none;
   appearance: none;
 }
