--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -26,6 +26,22 @@ $bds:#3c3d40;
   border: 1px solid $bds;
   overflow: hidden;
 }
+/*粉红色文字*/
+.point-font {
+  color: $bg-color-red;
+}
+/*蓝色文字*/
+.point-font2{
+  color: $color-blue;
+}
+/*橘色文字*/
+.point-font3{
+  color: $color-7;
+}
+/*下边距10*/
+.mgb10{
+  margin-bottom: 10px;
+}
 * {
   margin: 0;
   padding: 0;
@@ -94,21 +110,7 @@ li {
   zoom: 1;
 }
 
-/*粉红色文字*/
-.point-font {
-  color: $bg-color-red;
-}
-/*蓝色文字*/
-.point-font2{
-  color: $color-blue;
-}
-/*橘色文字*/
-.point-font3{
-  color: $color-7;
-}
-/*下边距10*/
-.mgb10{
-  margin-bottom: 10px;}
+
 
 .wrap-box{
   width: 100%;
@@ -927,4 +929,58 @@ input[type="checkbox"]:checked {
           width: 100%;
         }
     }
+}
+.logistics-info-wrap{
+  padding-bottom: 40px;
+  @extend %wrap;
+    p{
+      margin-top: 20px;
+      color: #ffffff;
+      font-size: 1.4em;
+    }
+    time{
+      color: $font-normal;
+      display: block;
+    }
+}
+.logistics-info-tt{
+  height: 80px;
+  line-height: 80px;
+  border-bottom: 1px solid $bds;
+  font-size: 2.1em;
+  color: #ffffff;
+}
+.gift-info-wrap{
+  width: 100%;
+}
+.gift-item{
+  position: relative;
+  padding: 40px 0;
+  border-bottom: 1px solid $bds;
+    h2{
+      @extend %wrap;
+      font-size: 1.6em;
+      font-weight: bold;
+      color: #ffffff;
+    }
+    i{
+      margin-right: 20px;
+      float: right;
+      font-weight: normal;
+    }
+    p{
+      margin-top: 8px;
+      @extend %wrap;
+      color: $font-normal;
+      font-size: 1.3em;
+    }
+  .right-logo {
+    position: absolute;
+    right: 10px;
+    top: 72px;
+    width: 10px;
+    height: 16px;
+    background: image-url("right-logo.png") 0 0 no-repeat;
+    background-size: 100%;
+  }
 }
