--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -1016,10 +1016,13 @@ input[type="checkbox"]:checked {
 }
 
 .pay-btn{
-  margin: 0 auto;
+  margin: 30px auto;
   width: 70%;
   height: 36px;
   @extend %btns;
   display: block;
   font-size: 1.6em;
+}
+.gift-info-con-item2.receive-info{
+  border-bottom: 0 none;
 }
