--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -1122,3 +1122,30 @@ input[type="checkbox"]:checked {
 .register-two-btn{
   margin-top: 0;
 }
+.address-succeed {
+  height: 132px;
+  line-height: 180px;
+  text-indent: 5px;
+  color: #ffffff;
+  font-size: 2.1em;
+  border-bottom: 1px solid $bds;
+  background: image-url("red-logo.png") 5px 14% no-repeat;
+  background-size: 40%;
+}
+.app-info-list2 {
+  margin-top: 30px;
+  li{
+    &:nth-of-type(1){
+      width: 60%;
+    }
+    &:nth-of-type(2){
+      width: 90%;
+    }
+    &:nth-of-type(3){
+      width: 95%;
+    }
+    &:nth-of-type(4){
+      width: 100%;
+    }
+  }
+}
