--- a/css/bbf-style.css
+++ b/css/bbf-style.css
@@ -721,7 +721,7 @@ li {
   position: relative;
   top: 50%;
   margin-top: -125px;
-  height: 250px;
+  width: 100%;
   background: rgba(0, 0, 0, 0.55);
   text-align: center;
   overflow: hidden; }
@@ -1186,5 +1186,23 @@ input[type="checkbox"]:checked {
   /* line 1147, ../sass/bbf-style.scss */
   .app-info-list2 li:nth-of-type(4) {
     width: 100%; }
+
+/* line 1152, ../sass/bbf-style.scss */
+.succeed-get-present {
+  padding: 30px 0;
+  margin-top: -180px; }
+  /* line 1155, ../sass/bbf-style.scss */
+  .succeed-get-present p {
+    margin-bottom: 0; }
+  /* line 1158, ../sass/bbf-style.scss */
+  .succeed-get-present .succeed-friend-btn2 {
+    margin-top: 60px;
+    width: 50%; }
+
+/* line 1163, ../sass/bbf-style.scss */
+.bag-pic {
+  margin: 0 auto;
+  width: 110px;
+  height: 144px; }
 
 /*@ sourceMappingURL=bbf-style.css.map */
