--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -700,7 +700,7 @@ li {
   position: relative;
   top: 50%;
   margin-top: -125px;
-  height: 250px;
+  width: 100%;
   background: rgba(0,0,0,.55);
   text-align: center;
   overflow: hidden;
@@ -1148,4 +1148,21 @@ input[type="checkbox"]:checked {
       width: 100%;
     }
   }
+}
+.succeed-get-present{
+  padding: 30px 0;
+  margin-top: -180px;
+  p{
+    margin-bottom: 0;
+  }
+  .succeed-friend-btn2{
+    margin-top: 60px;
+    width: 50%;
+  }
+}
+.bag-pic{
+  margin: 0 auto;
+  width: 110px;
+  height: 144px;
+
 }
