--- a/css/bbf-style.css
+++ b/css/bbf-style.css
@@ -835,12 +835,12 @@ input[type="checkbox"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background: url('../img/unchecked.png?1413467403') 0 0 no-repeat;
+  background: url('../img/unchecked.png?1413718508') 0 0 no-repeat;
   background-size: 100%; }
 
 /* line 814, ../sass/bbf-style.scss */
 input[type="checkbox"]:checked {
-  background: url('../img/checked.png?1413467381') 0 0 no-repeat;
+  background: url('../img/checked.png?1413718507') 0 0 no-repeat;
   -webkit-background-size: 100%;
   background-size: 100%; }
 
@@ -908,15 +908,15 @@ input[type="checkbox"]:checked {
       font-size: 13px; }
     /* line 876, ../sass/bbf-style.scss */
     .menu-list li:nth-of-type(1) {
-      background: url('../img/logo-1.png?1413386515') 15px 50% no-repeat;
+      background: url('../img/logo-1.png?1413718507') 15px 50% no-repeat;
       background-size: 10%; }
     /* line 880, ../sass/bbf-style.scss */
     .menu-list li:nth-of-type(2) {
-      background: url('../img/logo-2.png?1413386568') 15px 50% no-repeat;
+      background: url('../img/logo-2.png?1413718507') 15px 50% no-repeat;
       background-size: 10%; }
     /* line 884, ../sass/bbf-style.scss */
     .menu-list li:nth-of-type(3) {
-      background: url('../img/logo-3.png?1413386965') 15px 50% no-repeat;
+      background: url('../img/logo-3.png?1413718507') 15px 50% no-repeat;
       background-size: 10%; }
 
 /* line 890, ../sass/bbf-style.scss */
@@ -990,7 +990,7 @@ input[type="checkbox"]:checked {
     top: 72px;
     width: 10px;
     height: 16px;
-    background: url('../img/right-logo.png?1413591210') 0 0 no-repeat;
+    background: url('../img/right-logo.png?1413718507') 0 0 no-repeat;
     background-size: 100%; }
 
 /* line 963, ../sass/bbf-style.scss */
@@ -1107,45 +1107,45 @@ input[type="checkbox"]:checked {
   margin: 44px auto;
   height: 34px;
   text-indent: 1em;
+  font-size: 1.4em;
   display: block; }
 
-/* line 1078, ../sass/bbf-style.scss */
+/* line 1079, ../sass/bbf-style.scss */
 .yes {
-  background: url('../img/checked.png?1413467381') 90% 50% no-repeat;
+  background: url('../img/checked.png?1413718507') 90% 50% no-repeat;
   background-size: 8%; }
 
-/* line 1082, ../sass/bbf-style.scss */
+/* line 1083, ../sass/bbf-style.scss */
 .register-phone-btn {
   width: 70%;
   height: 36px;
-  line-height: 36px;
   font-size: 1.6em; }
 
-/* line 1089, ../sass/bbf-style.scss */
+/* line 1090, ../sass/bbf-style.scss */
 .register-input2 {
   margin-top: 0; }
 
-/* line 1092, ../sass/bbf-style.scss */
+/* line 1093, ../sass/bbf-style.scss */
 .register-input3 {
   margin-bottom: 14px; }
 
-/* line 1096, ../sass/bbf-style.scss */
+/* line 1097, ../sass/bbf-style.scss */
 .register-succeed {
   padding: 30px 0 35px 0; }
-  /* line 1098, ../sass/bbf-style.scss */
+  /* line 1099, ../sass/bbf-style.scss */
   .register-succeed p {
     margin-bottom: 18px;
     font-size: 1.4em;
     color: #ffffff; }
-    /* line 1102, ../sass/bbf-style.scss */
+    /* line 1103, ../sass/bbf-style.scss */
     .register-succeed p:nth-of-type(2) {
       margin-top: -20px;
       font-size: 2.1em; }
-  /* line 1107, ../sass/bbf-style.scss */
+  /* line 1108, ../sass/bbf-style.scss */
   .register-succeed em {
     font-size: 4em;
     font-weight: bold; }
-  /* line 1111, ../sass/bbf-style.scss */
+  /* line 1112, ../sass/bbf-style.scss */
   .register-succeed .faq {
     width: 65%;
     height: 27px;
@@ -1153,14 +1153,14 @@ input[type="checkbox"]:checked {
     color: #ffffff;
     font-size: 1.4em;
     text-indent: 1em;
-    background: #622a41 url('../img/right-logo.png?1413591210') 90% 50% no-repeat;
+    background: #622a41 url('../img/right-logo.png?1413718507') 90% 50% no-repeat;
     background-size: 5%; }
 
-/* line 1122, ../sass/bbf-style.scss */
+/* line 1123, ../sass/bbf-style.scss */
 .register-two-btn {
   margin-top: 0; }
 
-/* line 1125, ../sass/bbf-style.scss */
+/* line 1126, ../sass/bbf-style.scss */
 .address-succeed {
   height: 132px;
   line-height: 180px;
@@ -1168,38 +1168,38 @@ input[type="checkbox"]:checked {
   color: #ffffff;
   font-size: 2.1em;
   border-bottom: 1px solid #3c3d40;
-  background: url('../img/red-logo.png?1413621212') 5px 14% no-repeat;
+  background: url('../img/red-logo.png?1413718507') 5px 14% no-repeat;
   background-size: 40%; }
 
-/* line 1135, ../sass/bbf-style.scss */
+/* line 1136, ../sass/bbf-style.scss */
 .app-info-list2 {
   margin-top: 30px; }
-  /* line 1138, ../sass/bbf-style.scss */
+  /* line 1139, ../sass/bbf-style.scss */
   .app-info-list2 li:nth-of-type(1) {
     width: 60%; }
-  /* line 1141, ../sass/bbf-style.scss */
+  /* line 1142, ../sass/bbf-style.scss */
   .app-info-list2 li:nth-of-type(2) {
     width: 90%; }
-  /* line 1144, ../sass/bbf-style.scss */
+  /* line 1145, ../sass/bbf-style.scss */
   .app-info-list2 li:nth-of-type(3) {
     width: 95%; }
-  /* line 1147, ../sass/bbf-style.scss */
+  /* line 1148, ../sass/bbf-style.scss */
   .app-info-list2 li:nth-of-type(4) {
     width: 100%; }
 
-/* line 1152, ../sass/bbf-style.scss */
+/* line 1153, ../sass/bbf-style.scss */
 .succeed-get-present {
   padding: 30px 0;
   margin-top: -180px; }
-  /* line 1155, ../sass/bbf-style.scss */
+  /* line 1156, ../sass/bbf-style.scss */
   .succeed-get-present p {
     margin-bottom: 0; }
-  /* line 1158, ../sass/bbf-style.scss */
+  /* line 1159, ../sass/bbf-style.scss */
   .succeed-get-present .succeed-friend-btn2 {
     margin-top: 60px;
     width: 50%; }
 
-/* line 1163, ../sass/bbf-style.scss */
+/* line 1164, ../sass/bbf-style.scss */
 .bag-pic {
   margin: 0 auto;
   width: 110px;
